feat: implemented addFunds to wallet
